--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/fabricio-garcia/testing-practice#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.8.6",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "jest": "^25.1.0"
   }
 }
