[fix] Add Eslint as NPM command
What?: #3

Breaking Changes?

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Practice testing on JS files",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --color --cache -f table js",
     "test": "jest --coverage -w =100%"
   },
   "jest": {
